commit before changing deck of cards to array of objects

--- a/black_jack_game/index.html
+++ b/black_jack_game/index.html
@@ -13,12 +13,23 @@
     <div class='container' id='top-container'>
         <div id='dealer-hand'>
             <h4>Dealer Hand</h4>
-            <div class='card'>2 hearts</div>
-            <div class='card'>test</div>
-            <div class='card'>3</div>
-            <div class='card'>4</div>
-            <div class='card'>5</div>
+            <div id='dealer-cards'>
+                <div class='card'>
+                    <div class='card-text'>2 <br>hearts</div>
+                </div>
+                <!-- <div class='card'>
+                    <div class='card-text'>2 <br>hearts</div>
+                </div>
+                <div class='card'>
+                    <div class='card-text'>2 <br>hearts</div>
+                </div>
+                <div class='card'>
+                    <div class='card-text'>2 <br>hearts</div>
+                </div> -->
+
+            </div>
             <h4>Count: </h4>
+            
         </div>
     </div>
 
@@ -36,13 +47,23 @@
     </div>
 
     <div class='container' id='bottom-container'>
-        <div id='dealer-hand'>
+        <div id='player-hand'>
             <h4>Player Hand</h4>
-            <div class='card'>2 hearts</div>
-            <div class='card'>test</div>
-            <div class='card'>3</div>
-            <div class='card'>4</div>
-            <div class='card'>5</div>
+            <div class='card'>
+                <div class='card-text'>2 <br>hearts</div>
+            </div>
+            <div class='card'>
+                <div class='card-text'>2 <br>hearts</div>
+            </div>
+            <div class='card'>
+                <div class='card-text'>2 <br>hearts</div>
+            </div>
+            <div class='card'>
+                <div class='card-text'>2 <br>hearts</div>
+            </div>
+            <div class='card'>
+                <div class='card-text'>2 <br>hearts</div>
+            </div>
             <h4>Count: </h4>
         </div>
         
