fixed and working through bugs

--- a/black_jack_game/index.html
+++ b/black_jack_game/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlackJack Game</title>
     <link rel="stylesheet" href="style.css">
-    <script src='app.js' defer></script>
+    <script src='app.js' defer ></script>
 </head>
 <body>
     <h1>BlackJack!</h1>
     <div class='container' id='top-container'>
         <div id='dealer-hand'>
-            <h4>Dealer Handddd</h4>
+            <h4>Dealer Hand</h4>
             <div id='dealer-cards'>
 
 
