added image file folder for card faces

--- a/black_jack_game/index.html
+++ b/black_jack_game/index.html
@@ -7,6 +7,7 @@
     <title>BlackJack Game</title>
     <link rel="stylesheet" href="style.css">
     <script src='app.js' defer ></script>
+    <!-- card faces downloaded from this link==> https://acbl.mybigcommerce.com/52-playing-cards/ -->
 </head>
 <body>
     <h1>BlackJack!</h1>
