added CSS styling

--- a/black_jack_game/index.html
+++ b/black_jack_game/index.html
@@ -26,12 +26,13 @@
     <div class='container' id='middle-container'>
         <div class='left-side'>
             <button id='hit-btn'>HIT/DEAL</button> <br>
-            <button id='stay-btn'>STAY</button> <br>
+            <button id='stay-btn'>STAND</button> <br>
             <button id = 'restart-btn'>RESTART</button>
         </div>
         <div class='right-side'>
-            <h5 id='dealer-winnings'>Dealer winnings: </h5>
-            <h5 id='player-winnings'>Player winnings: </h5>
+            <h4 id='current-bet'>Current Bet: 0</h4>
+            <h4 id='dealer-winnings'>Dealer winnings: </h5>
+            <h4 id='player-winnings'>Player winnings: </h5>
         </div>
         
     </div>
