added addtional font style

--- a/black_jack_game/index.html
+++ b/black_jack_game/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <script src='app.js' defer ></script>
     <!-- card faces downloaded from this link==> https://acbl.mybigcommerce.com/52-playing-cards/ -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>BlackJack!</h1>
