--- a/black_jack_game/index.html
+++ b/black_jack_game/index.html
@@ -16,10 +16,10 @@
     <div class='container' id='top-container'>
         <div id='dealer-hand'>
             <h4>Dealer Hand</h4>
-            <div id='dealer-cards'>
+            <!-- <div id='dealer-cards'>
 
 
-            </div>
+            </div> -->
             <h4 id='dealer-score'>Count: </h4>
             
         </div>
@@ -42,9 +42,9 @@
     <div class='container' id='bottom-container'>
         <div id='player-hand'>
             <h4>Player Hand</h4>
-            <div id='player-cards'>
+            <!-- <div id='player-cards'>
 
-            </div>
+            </div> -->
             <!-- <div class='card'>
                 <div class='card-text'>2 <br>hearts</div>
             </div> -->
